package dice;

public class D10 extends Dice {

    public D10() {
        super(10);
    }
}
