package dice;

public class D12 extends Dice {

    public D12() {
        super(12);
    }
}
