package dice;

public class D20 extends Dice {

    public D20() {
        super(20);
    }
}
