@startuml

package dice {
    class Dice {
        -m_val : int
        +Dice()
        +Dice(val: int)
        +getVal() : int
        +toString() : String
        +rollDice(nRolls: int) : int
        +rollDice() : int
    }

    class D4
    class D6
    class D8
    class D10
    class D12
    class D20

    Dice <|-- D4
    Dice <|-- D6
    Dice <|-- D8
    Dice <|-- D10
    Dice <|-- D12
    Dice <|-- D20
}

package entites {
    class Attaques {
        -m_nom : String
        -m_portee : int
        -m_de : Dice
        -m_nbDe : int
        +Attaques(...)
        +calculerDegats() : int
        +getNom() : String
        +getPortee() : int
        +getDe() : Dice
        +getNbDe() : int
        +toString() : String
    }

    abstract class Entites {
        -m_attaque : Attaques
        -m_PV : int
        -m_PVMax : int
        -m_force : int
        -m_dexterite : int
        -m_initiative : int
        -m_CA : int
        -m_vitesse : int
        +Entites()
        +Entites(...)
        +degatsAttaque() : int
        +AttaqueTouche(CA: int) : Boolean
        +attaquer(cible: Entites) : void
        +estBlesse(degats: int) : void
        +toString() : String
    }
}

package entites.monstres {
    class Monstres {
        -m_espece : String
        -m_num : int
        +Monstres()
        +Monstres(...)
        +getEspece() : String
        +getNum() : int
        +toString() : String
    }

    Entites <|-- Monstres
}

package entites.personnages {
    class Personnages {
        -m_nom : String
        -m_race : Races
        -m_classe : Classes
        -m_inventaire : ArrayList<Equipements>
        -m_arme : Armes
        -m_armure : Armures
        +Personnages(...)
        +equiperArme(arme: Armes) : void
        +equiperArmure(armure: Armures) : void
        +prendre(equipement: Equipements) : void
        +getNom() : String
        +getRace() : Races
        +getClasses() : Classes
        +getInventaire() : ArrayList<Equipements>
        +getArme() : Armes
        +getArmure() : Armures
        +Overrides: getForce(), getVitesse(), getCA(), getAttaque()
        +toString() : String
    }

    Entites <|-- Personnages
}

package entites.personnages.classes {
    class Classes {
        -m_nom : String
        -m_PVMax : int
        -m_inventaire : ArrayList<Equipements>
        +Classes(...)
        +getNom() : String
        +getPVMax() : int
        +getInventaire() : ArrayList<Equipements>
        +setInventaire(equipement: Equipements) : void
        +toString() : String
    }

    class Clercs
    class Guerriers
    class Magiciens
    class Roublards

    Classes <|-- Clercs
    Classes <|-- Guerriers
    Classes <|-- Magiciens
    Classes <|-- Roublards
}

package entites.personnages.races {
    class Races {
        -m_nom : String
        +Races(...)
        +getNom() : String
        +getBonusForce() : int
        +getBonusDexterite() : int
        +getBonusVitesse() : int
        +getM_bonusInitiative() : int
        +getBonusPVMax() : int
        +toString() : String
    }

    class Elfes {
        -m_bonusDexterite : int
        +getBonusDexterite() : int
    }

    class Halfelins {
        -m_bonusDexterite : int
        -m_bonusVitesse : int
    }

    class Humains {
        -m_bonusForce : int
        -m_bonusDexterite : int
        -m_bonusVitesse : int
        -m_bonusInitiative : int
        -m_bonusPVMax : int
    }

    class Nains {
        -m_bonusForce : int
    }

    Races <|-- Elfes
    Races <|-- Halfelins
    Races <|-- Humains
    Races <|-- Nains
}

package entites.personnages.equipements {
    abstract class Equipements {
        -m_nom : String
        -m_categorie : String
        +Equipements(...)
        +getNom() : String
        +getCategorie() : String
        +toString() : String
    }
}

package entites.personnages.equipements.armes {
    abstract class Armes {
        -m_attaques : Attaques
        -m_MalusVitesse : int
        -m_BonusForce : int
        +Armes(...)
        +calculerDegats() : int
        +getAttaques() : Attaques
        +getMalusVitesse() : int
        +getBonusForce() : int
        +equals(obj: Object) : boolean
        +toString() : String
    }

    class Courante
    class DeGuerre
    class Distance

    Armes <|-- Courante
    Armes <|-- DeGuerre
    Armes <|-- Distance

    Courante <|-- Baton
    Courante <|-- MasseArme
    Courante <|-- Poing
    DeGuerre <|-- EpeeLongue
    DeGuerre <|-- Rapiere
    Distance <|-- Fronde
    Distance <|-- ArbaleteLegere
    Distance <|-- ArcCourt
}

package entites.personnages.equipements.armures {
    abstract class Armures {
        -m_CA : int
        -m_MalusVitesse : int
        +Armures(nom: String, CA: int, MalusVitesse: int, categorie: String)
        +getCA() : int
        +getMalusVitesse() : int
        +toString() : String
    }

    Armures <|-- Legeres
    Armures <|-- Lourdes

    Legeres <|-- ArmureEcaille
    Legeres <|-- DemiPlate
    Lourdes <|-- CoteMaille
    Lourdes <|-- Harnois
}

@enduml